--- a/custom/index.html
+++ b/custom/index.html
@@ -86,7 +86,6 @@
                     <a href="../index.html">网站首页</a>
                     >
                     <a href="index.html">定制开发</a>
-                    >
                 </div>
             </div>
         </div>
@@ -220,7 +219,7 @@
             <div class="col-md-4 pricing-table2">
                 <div class="single-pricing-2">
               <span class="plan-name text-center">
-                服务器备维
+                服务器运维
               </span>
                     <p class="plan-price"><sup class="currency">&yen;</sup><strong>1500+</strong></p>
                     <ul class="list-unstyled">
@@ -256,9 +255,9 @@
                     <p class="plan-price"><sup class="currency">&yen;</sup><strong>5000+</strong></p>
                     <ul class="list-unstyled">
                         <li>微信公众号开发</li>
-                        <li>小程序开发</li>
-                        <li>提成需求说明书</li>
-                        <li>准备微信的帐户</li>
+                        <li>微信小程序开发</li>
+                        <li>提供需求说明书</li>
+                        <li>准备微信账号</li>
                     </ul>
                 </div>
             </div>
@@ -274,13 +273,13 @@
         <div class="row">
             <div class="col-md-6 col-sm-6">
                 <p class="copyright-text">
-                    ©  2021 Dahuu. All right reserved.
+                    ©  2022 徐州世北客网络科技有限公司. All right reserved.
                 </p>
             </div>
             <div class="col-md-6  col-sm-6">
                 <ul class="nav nav-inline  justify-content-end ">
                     <li class="nav-item">
-                        <a class="nav-link active" href="http://www.miibeian.gov.cn/" target="_blank" rel="nofollow">苏ICP备2021032947</a>
+                        <a target="_blank" class="nav-link active" target="_blank" rel="nofollow" href="https://beian.miit.gov.cn/">苏ICP备2021032947号-1</a>
                     </li>
                 </ul>
             </div>
