--- a/goods/2.html
+++ b/goods/2.html
@@ -158,7 +158,7 @@
             <div class="col-md-6  col-sm-6">
                 <ul class="nav nav-inline  justify-content-end ">
                     <li class="nav-item">
-                        <a class="nav-link active" href="http://www.miibeian.gov.cn/" target="_blank" rel="nofollow">苏ICP备2021032947</a>
+                        <a target="_blank" class="nav-link active" target="_blank" rel="nofollow" href="https://beian.miit.gov.cn/">苏ICP备2021032947号-1</a>
                     </li>
                 </ul>
             </div>
