--- a/index.html
+++ b/index.html
@@ -464,13 +464,13 @@
         <div class="row">
             <div class="col-md-6 col-sm-6">
                 <p class="copyright-text">
-                    ©  2021 徐州世北客网络科技有限公司. All right reserved.
+                    ©  2022 徐州世北客网络科技有限公司. All right reserved.
                 </p>
             </div>
             <div class="col-md-6  col-sm-6">
                 <ul class="nav nav-inline  justify-content-end ">
                     <li class="nav-item">
-                      <a target="_blank" class="nav-link active" target="_blank" rel="nofollow" href="https://beian.miit.gov.cn/">苏ICP备2021032947</a>
+                      <a target="_blank" class="nav-link active" target="_blank" rel="nofollow" href="https://beian.miit.gov.cn/">苏ICP备2021032947号-1</a>
                     </li>
                 </ul>
             </div>
